--- a/County_Spatial_Cases_Deaths.ipynb
+++ b/County_Spatial_Cases_Deaths.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,13 @@
     "#df.columns = df.columns.str.replace(r'_x$', '')\n",
     "#df.rename(columns = lambda x: x.strip('attributes.'))\n",
     "df.columns = [col.replace('attributes.', '') for col in df.columns]\n",
-    "#df.head(30)"
+    "#df.head(30)\n",
+    "url='https://raw.githubusercontent.com/slu-openGIS/MO_HEALTH_Covid_Tracking/master/data/source/mo_county_plus/mo_county_plus.csv?_sm_au_=iTVT4DZWZtNnt5PPHftsvK0JJcR7F'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,17 +84,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2224</td>\n",
+       "      <td>2341</td>\n",
        "      <td>Adair</td>\n",
        "      <td>ADAIR</td>\n",
-       "      <td>292</td>\n",
+       "      <td>294</td>\n",
        "      <td>0</td>\n",
        "      <td>1.473390e+09</td>\n",
        "      <td>155251.053818</td>\n",
-       "      <td>d63c9a2c-216e-4e32-92c3-c04fb2a2ea73</td>\n",
-       "      <td>1600109015000</td>\n",
+       "      <td>eb61ba50-971b-4196-83a4-20241de9f1d5</td>\n",
+       "      <td>1600196432000</td>\n",
        "      <td>mophep</td>\n",
-       "      <td>1600109015000</td>\n",
+       "      <td>1600196432000</td>\n",
        "      <td>mophep</td>\n",
        "      <td>[[[-92.3478208840285, 40.302804629629], [-92.3...</td>\n",
        "      <td>1</td>\n",
@@ -102,17 +103,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2225</td>\n",
+       "      <td>2342</td>\n",
        "      <td>Andrew</td>\n",
        "      <td>ANDREW</td>\n",
-       "      <td>187</td>\n",
+       "      <td>189</td>\n",
        "      <td>1</td>\n",
        "      <td>1.130287e+09</td>\n",
        "      <td>163786.567767</td>\n",
-       "      <td>1927484c-6fa6-4f9e-a9bd-910cb1637fed</td>\n",
-       "      <td>1600109015000</td>\n",
+       "      <td>a06c4b57-d213-4c44-959d-07c403e2294e</td>\n",
+       "      <td>1600196432000</td>\n",
        "      <td>mophep</td>\n",
-       "      <td>1600109015000</td>\n",
+       "      <td>1600196432000</td>\n",
        "      <td>mophep</td>\n",
        "      <td>[[[-94.6059390844084, 40.1261753038853], [-94....</td>\n",
        "      <td>3</td>\n",
@@ -121,17 +122,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2226</td>\n",
+       "      <td>2343</td>\n",
        "      <td>Atchison</td>\n",
        "      <td>ATCHISON</td>\n",
        "      <td>41</td>\n",
        "      <td>0</td>\n",
        "      <td>1.418004e+09</td>\n",
        "      <td>188930.314765</td>\n",
-       "      <td>eac8d9bc-406f-4744-b5f5-df503e84e5af</td>\n",
-       "      <td>1600109015000</td>\n",
+       "      <td>a13cc9b2-0fa4-45f6-8a19-1ceaa58d0589</td>\n",
+       "      <td>1600196432000</td>\n",
        "      <td>mophep</td>\n",
-       "      <td>1600109015000</td>\n",
+       "      <td>1600196432000</td>\n",
        "      <td>mophep</td>\n",
        "      <td>[[[-95.2024414996767, 40.5784663769025], [-95....</td>\n",
        "      <td>5</td>\n",
@@ -140,17 +141,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2227</td>\n",
+       "      <td>2344</td>\n",
        "      <td>Audrain</td>\n",
        "      <td>AUDRAIN</td>\n",
-       "      <td>371</td>\n",
+       "      <td>372</td>\n",
        "      <td>2</td>\n",
        "      <td>1.803689e+09</td>\n",
        "      <td>215719.629416</td>\n",
-       "      <td>d934afc7-bb5c-4ded-b13f-9fc4c01b3c2d</td>\n",
-       "      <td>1600109016000</td>\n",
+       "      <td>47568e25-4258-4f68-a3ff-d812c3c57cec</td>\n",
+       "      <td>1600196433000</td>\n",
        "      <td>mophep</td>\n",
-       "      <td>1600109016000</td>\n",
+       "      <td>1600196433000</td>\n",
        "      <td>mophep</td>\n",
        "      <td>[[[-91.7179813406387, 39.3391363676128], [-91....</td>\n",
        "      <td>7</td>\n",
@@ -159,58 +160,199 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2228</td>\n",
+       "      <td>2345</td>\n",
        "      <td>Barry</td>\n",
        "      <td>BARRY</td>\n",
-       "      <td>410</td>\n",
+       "      <td>411</td>\n",
        "      <td>5</td>\n",
        "      <td>2.047063e+09</td>\n",
        "      <td>183363.850208</td>\n",
-       "      <td>2bf3c157-f782-4e3c-8a32-b4828a183d2a</td>\n",
-       "      <td>1600109016000</td>\n",
+       "      <td>08fb998f-b2f1-4b8a-a480-d00fce770e78</td>\n",
+       "      <td>1600196433000</td>\n",
        "      <td>mophep</td>\n",
-       "      <td>1600109016000</td>\n",
+       "      <td>1600196433000</td>\n",
        "      <td>mophep</td>\n",
        "      <td>[[[-93.6110169618323, 36.9228443060673], [-93....</td>\n",
        "      <td>9</td>\n",
        "      <td>29009</td>\n",
        "      <td>758459</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>2453</td>\n",
+       "      <td>Worth</td>\n",
+       "      <td>WORTH</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.909581e+08</td>\n",
+       "      <td>112107.434614</td>\n",
+       "      <td>f138adf5-4c3f-4f1d-99d8-ab78f41f488a</td>\n",
+       "      <td>1600196461000</td>\n",
+       "      <td>mophep</td>\n",
+       "      <td>1600196461000</td>\n",
+       "      <td>mophep</td>\n",
+       "      <td>[[[-94.2142068454973, 40.3987217696141], [-94....</td>\n",
+       "      <td>227</td>\n",
+       "      <td>29227</td>\n",
+       "      <td>758566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>2454</td>\n",
+       "      <td>Gentry</td>\n",
+       "      <td>GENTRY</td>\n",
+       "      <td>109</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.273682e+09</td>\n",
+       "      <td>143258.503493</td>\n",
+       "      <td>d6424b36-f733-4925-b7fa-04a4bbd941d1</td>\n",
+       "      <td>1600196461000</td>\n",
+       "      <td>mophep</td>\n",
+       "      <td>1600196461000</td>\n",
+       "      <td>mophep</td>\n",
+       "      <td>[[[-94.5890217181668, 40.3866648099594], [-94....</td>\n",
+       "      <td>75</td>\n",
+       "      <td>29075</td>\n",
+       "      <td>758492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>2455</td>\n",
+       "      <td>DeKalb</td>\n",
+       "      <td>DEKALB</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.102099e+09</td>\n",
+       "      <td>132761.715355</td>\n",
+       "      <td>6fac05cd-cef0-46cb-9852-630f9600fdd0</td>\n",
+       "      <td>1600196461000</td>\n",
+       "      <td>mophep</td>\n",
+       "      <td>1600196461000</td>\n",
+       "      <td>mophep</td>\n",
+       "      <td>[[[-94.2056954453697, 39.8181306353613], [-94....</td>\n",
+       "      <td>63</td>\n",
+       "      <td>29063</td>\n",
+       "      <td>758486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>2456</td>\n",
+       "      <td>Maries</td>\n",
+       "      <td>MARIES</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.372186e+09</td>\n",
+       "      <td>161629.878990</td>\n",
+       "      <td>32521c85-7046-44b2-b4fc-7b181cdd24e0</td>\n",
+       "      <td>1600196462000</td>\n",
+       "      <td>mophep</td>\n",
+       "      <td>1600196462000</td>\n",
+       "      <td>mophep</td>\n",
+       "      <td>[[[-91.8315698656889, 38.2933315698199], [-91....</td>\n",
+       "      <td>125</td>\n",
+       "      <td>29125</td>\n",
+       "      <td>758516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>2457</td>\n",
+       "      <td>Phelps</td>\n",
+       "      <td>PHELPS</td>\n",
+       "      <td>353</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.744679e+09</td>\n",
+       "      <td>210145.418054</td>\n",
+       "      <td>c61f1a2e-3340-416c-9988-f31906b70ef9</td>\n",
+       "      <td>1600196462000</td>\n",
+       "      <td>mophep</td>\n",
+       "      <td>1600196462000</td>\n",
+       "      <td>mophep</td>\n",
+       "      <td>[[[-91.5249240237418, 38.1523446245754], [-91....</td>\n",
+       "      <td>161</td>\n",
+       "      <td>29161</td>\n",
+       "      <td>758535</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>109 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   OBJECTID      NAME     NAME2  CASES  DEATHS   Shape__Area  Shape__Length  \\\n",
-       "0      2224     Adair     ADAIR    292       0  1.473390e+09  155251.053818   \n",
-       "1      2225    Andrew    ANDREW    187       1  1.130287e+09  163786.567767   \n",
-       "2      2226  Atchison  ATCHISON     41       0  1.418004e+09  188930.314765   \n",
-       "3      2227   Audrain   AUDRAIN    371       2  1.803689e+09  215719.629416   \n",
-       "4      2228     Barry     BARRY    410       5  2.047063e+09  183363.850208   \n",
+       "     OBJECTID      NAME     NAME2  CASES  DEATHS   Shape__Area  Shape__Length  \\\n",
+       "0        2341     Adair     ADAIR    294       0  1.473390e+09  155251.053818   \n",
+       "1        2342    Andrew    ANDREW    189       1  1.130287e+09  163786.567767   \n",
+       "2        2343  Atchison  ATCHISON     41       0  1.418004e+09  188930.314765   \n",
+       "3        2344   Audrain   AUDRAIN    372       2  1.803689e+09  215719.629416   \n",
+       "4        2345     Barry     BARRY    411       5  2.047063e+09  183363.850208   \n",
+       "..        ...       ...       ...    ...     ...           ...            ...   \n",
+       "104      2453     Worth     WORTH     18       0  6.909581e+08  112107.434614   \n",
+       "105      2454    Gentry    GENTRY    109       9  1.273682e+09  143258.503493   \n",
+       "106      2455    DeKalb    DEKALB    101       2  1.102099e+09  132761.715355   \n",
+       "107      2456    Maries    MARIES     62       0  1.372186e+09  161629.878990   \n",
+       "108      2457    Phelps    PHELPS    353       1  1.744679e+09  210145.418054   \n",
        "\n",
-       "                               GlobalID   CreationDate Creator       EditDate  \\\n",
-       "0  d63c9a2c-216e-4e32-92c3-c04fb2a2ea73  1600109015000  mophep  1600109015000   \n",
-       "1  1927484c-6fa6-4f9e-a9bd-910cb1637fed  1600109015000  mophep  1600109015000   \n",
-       "2  eac8d9bc-406f-4744-b5f5-df503e84e5af  1600109015000  mophep  1600109015000   \n",
-       "3  d934afc7-bb5c-4ded-b13f-9fc4c01b3c2d  1600109016000  mophep  1600109016000   \n",
-       "4  2bf3c157-f782-4e3c-8a32-b4828a183d2a  1600109016000  mophep  1600109016000   \n",
+       "                                 GlobalID   CreationDate Creator  \\\n",
+       "0    eb61ba50-971b-4196-83a4-20241de9f1d5  1600196432000  mophep   \n",
+       "1    a06c4b57-d213-4c44-959d-07c403e2294e  1600196432000  mophep   \n",
+       "2    a13cc9b2-0fa4-45f6-8a19-1ceaa58d0589  1600196432000  mophep   \n",
+       "3    47568e25-4258-4f68-a3ff-d812c3c57cec  1600196433000  mophep   \n",
+       "4    08fb998f-b2f1-4b8a-a480-d00fce770e78  1600196433000  mophep   \n",
+       "..                                    ...            ...     ...   \n",
+       "104  f138adf5-4c3f-4f1d-99d8-ab78f41f488a  1600196461000  mophep   \n",
+       "105  d6424b36-f733-4925-b7fa-04a4bbd941d1  1600196461000  mophep   \n",
+       "106  6fac05cd-cef0-46cb-9852-630f9600fdd0  1600196461000  mophep   \n",
+       "107  32521c85-7046-44b2-b4fc-7b181cdd24e0  1600196462000  mophep   \n",
+       "108  c61f1a2e-3340-416c-9988-f31906b70ef9  1600196462000  mophep   \n",
        "\n",
-       "   Editor                                     geometry.rings  CNTY_FIPS  \\\n",
-       "0  mophep  [[[-92.3478208840285, 40.302804629629], [-92.3...          1   \n",
-       "1  mophep  [[[-94.6059390844084, 40.1261753038853], [-94....          3   \n",
-       "2  mophep  [[[-95.2024414996767, 40.5784663769025], [-95....          5   \n",
-       "3  mophep  [[[-91.7179813406387, 39.3391363676128], [-91....          7   \n",
-       "4  mophep  [[[-93.6110169618323, 36.9228443060673], [-93....          9   \n",
+       "          EditDate  Editor                                     geometry.rings  \\\n",
+       "0    1600196432000  mophep  [[[-92.3478208840285, 40.302804629629], [-92.3...   \n",
+       "1    1600196432000  mophep  [[[-94.6059390844084, 40.1261753038853], [-94....   \n",
+       "2    1600196432000  mophep  [[[-95.2024414996767, 40.5784663769025], [-95....   \n",
+       "3    1600196433000  mophep  [[[-91.7179813406387, 39.3391363676128], [-91....   \n",
+       "4    1600196433000  mophep  [[[-93.6110169618323, 36.9228443060673], [-93....   \n",
+       "..             ...     ...                                                ...   \n",
+       "104  1600196461000  mophep  [[[-94.2142068454973, 40.3987217696141], [-94....   \n",
+       "105  1600196461000  mophep  [[[-94.5890217181668, 40.3866648099594], [-94....   \n",
+       "106  1600196461000  mophep  [[[-94.2056954453697, 39.8181306353613], [-94....   \n",
+       "107  1600196462000  mophep  [[[-91.8315698656889, 38.2933315698199], [-91....   \n",
+       "108  1600196462000  mophep  [[[-91.5249240237418, 38.1523446245754], [-91....   \n",
        "\n",
-       "    FIPS  COUNTYGNIS  \n",
-       "0  29001      765805  \n",
-       "1  29003      758456  \n",
-       "2  29005      758457  \n",
-       "3  29007      758458  \n",
-       "4  29009      758459  "
+       "     CNTY_FIPS   FIPS  COUNTYGNIS  \n",
+       "0            1  29001      765805  \n",
+       "1            3  29003      758456  \n",
+       "2            5  29005      758457  \n",
+       "3            7  29007      758458  \n",
+       "4            9  29009      758459  \n",
+       "..         ...    ...         ...  \n",
+       "104        227  29227      758566  \n",
+       "105         75  29075      758492  \n",
+       "106         63  29063      758486  \n",
+       "107        125  29125      758516  \n",
+       "108        161  29161      758535  \n",
+       "\n",
+       "[109 rows x 16 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +362,89 @@
     "#county_df2['NAME2'] = county_df2['NAME2'].astype(str)\n",
     "#df.join(county_df2, on='NAME2')\n",
     "df_final=df.merge(county_df2, left_on='NAME2', right_on='NAME2')\n",
-    "df_final.head()"
+    "df_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   GEOID               NAME  total_pop\n",
+      "0  29083       Henry County      21765\n",
+      "1  29011      Barton County      11850\n",
+      "2  29103        Knox County       3951\n",
+      "3  29117  Livingston County      15076\n",
+      "4  29101     Johnson County      53689\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import io\n",
+    "\n",
+    "url='https://raw.githubusercontent.com/slu-openGIS/MO_HEALTH_Covid_Tracking/master/data/source/mo_county_plus/mo_county_plus.csv?_sm_au_=iTVT4DZWZtNnt5PPHftsvK0JJcR7F'\n",
+    "download = requests.get(url).content\n",
+    "\n",
+    "# Reading the downloaded content and turning it into a pandas dataframe\n",
+    "\n",
+    "df_pop = pd.read_csv(io.StringIO(download.decode('utf-8')))\n",
+    "\n",
+    "# Printing out the first 5 rows of the dataframe\n",
+    "\n",
+    "print (df_pop.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final.merge(df_pop, left_on='FIPS', right_on='GEOID')\n",
+    "df_final_1 = df_final.drop(columns=['geometry.rings'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final_1.to_csv(\"county_aggregate.csv\", encoding=\"utf-8\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import io\n",
+    "\n",
+    "url= 'https://raw.githubusercontent.com/slu-openGIS/MO_HEALTH_Covid_Tracking/master/data/county/county_full.csv?_sm_au_=iTVT4DZWZtNnt5PPHftsvK0JJcR7F'\n",
+    "download = requests.get(url).content\n",
+    "\n",
+    "# Reading the downloaded content and turning it into a pandas dataframe\n",
+    "\n",
+    "df_county = pd.read_csv(io.StringIO(download.decode('utf-8')))\n",
+    "df_county_tests = df_county[(df_county.state == \"Missouri\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_county_tests.to_csv(\"county_tests.csv\", encoding=\"utf-8\", index=False)"
    ]
   },
   {
