--- a/CSV_from_GIT.ipynb
+++ b/CSV_from_GIT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,10 +41,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   GEOID               NAME  total_pop\n",
+      "0  29083       Henry County      21765\n",
+      "1  29011      Barton County      11850\n",
+      "2  29103        Knox County       3951\n",
+      "3  29117  Livingston County      15076\n",
+      "4  29101     Johnson County      53689\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import io\n",
+    "\n",
+    "url='https://raw.githubusercontent.com/slu-openGIS/MO_HEALTH_Covid_Tracking/master/data/source/mo_county_plus/mo_county_plus.csv?_sm_au_=iTVT4DZWZtNnt5PPHftsvK0JJcR7F'\n",
+    "download = requests.get(url).content\n",
+    "\n",
+    "# Reading the downloaded content and turning it into a pandas dataframe\n",
+    "\n",
+    "df_pop = pd.read_csv(io.StringIO(download.decode('utf-8')))\n",
+    "\n",
+    "# Printing out the first 5 rows of the dataframe\n",
+    "\n",
+    "print (df_pop.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import io\n",
+    "\n",
+    "url= 'https://raw.githubusercontent.com/slu-openGIS/MO_HEALTH_Covid_Tracking/master/data/county/county_full.csv?_sm_au_=iTVT4DZWZtNnt5PPHftsvK0JJcR7F'\n",
+    "download = requests.get(url).content\n",
+    "\n",
+    "# Reading the downloaded content and turning it into a pandas dataframe\n",
+    "\n",
+    "df_county_tests = pd.read_csv(io.StringIO(download.decode('utf-8')))\n",
+    "\n",
+    "# Printing out the first 5 rows of the dataframe\n",
+    "\n",
+    "print (df_county_tests.head())"
+   ]
   }
  ],
  "metadata": {
@@ -63,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
