--- a/main_dave.ipynb
+++ b/main_dave.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,293 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ï»¿Summary Level</th>\n",
+       "      <th>State Code (FIPS)</th>\n",
+       "      <th>County Code (FIPS)</th>\n",
+       "      <th>Area Name (including legal/statistical area description)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Adair County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Andrew County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Atchison County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Audrain County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Barry County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>223</td>\n",
+       "      <td>Wayne County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>225</td>\n",
+       "      <td>Webster County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>227</td>\n",
+       "      <td>Worth County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>229</td>\n",
+       "      <td>Wright County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>510</td>\n",
+       "      <td>City of St. Louis County</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>115 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ï»¿Summary Level  State Code (FIPS)  County Code (FIPS)  \\\n",
+       "0                  50                 29                   1   \n",
+       "1                  50                 29                   3   \n",
+       "2                  50                 29                   5   \n",
+       "3                  50                 29                   7   \n",
+       "4                  50                 29                   9   \n",
+       "..                ...                ...                 ...   \n",
+       "110                50                 29                 223   \n",
+       "111                50                 29                 225   \n",
+       "112                50                 29                 227   \n",
+       "113                50                 29                 229   \n",
+       "114                50                 29                 510   \n",
+       "\n",
+       "    Area Name (including legal/statistical area description)  \n",
+       "0                                         Adair County        \n",
+       "1                                        Andrew County        \n",
+       "2                                      Atchison County        \n",
+       "3                                       Audrain County        \n",
+       "4                                         Barry County        \n",
+       "..                                                 ...        \n",
+       "110                                       Wayne County        \n",
+       "111                                     Webster County        \n",
+       "112                                       Worth County        \n",
+       "113                                      Wright County        \n",
+       "114                           City of St. Louis County        \n",
+       "\n",
+       "[115 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fips_data = \"mo_county_fips.csv\"\n",
+    "fips_data_df = pd.read_csv(fips_data, encoding=\"ISO-8859-1\")\n",
+    "fips_data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County Code (FIPS)</th>\n",
+       "      <th>Area Name (including legal/statistical area description)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Adair County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Andrew County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Atchison County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Audrain County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Barry County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>223</td>\n",
+       "      <td>Wayne County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>225</td>\n",
+       "      <td>Webster County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>227</td>\n",
+       "      <td>Worth County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>229</td>\n",
+       "      <td>Wright County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>510</td>\n",
+       "      <td>City of St. Louis County</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>115 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     County Code (FIPS)  \\\n",
+       "0                     1   \n",
+       "1                     3   \n",
+       "2                     5   \n",
+       "3                     7   \n",
+       "4                     9   \n",
+       "..                  ...   \n",
+       "110                 223   \n",
+       "111                 225   \n",
+       "112                 227   \n",
+       "113                 229   \n",
+       "114                 510   \n",
+       "\n",
+       "    Area Name (including legal/statistical area description)  \n",
+       "0                                         Adair County        \n",
+       "1                                        Andrew County        \n",
+       "2                                      Atchison County        \n",
+       "3                                       Audrain County        \n",
+       "4                                         Barry County        \n",
+       "..                                                 ...        \n",
+       "110                                       Wayne County        \n",
+       "111                                     Webster County        \n",
+       "112                                       Worth County        \n",
+       "113                                      Wright County        \n",
+       "114                           City of St. Louis County        \n",
+       "\n",
+       "[115 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_fips_data_df = fips_data_df.iloc[:,2:]\n",
+    "clean_fips_data_df"
    ]
   },
   {
